--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - demo-webapp
+  - aks-demo-webapp
   - aks-store-demo
