--- a/apps/aks-demo-webapp/demo-webapp.yaml
+++ b/apps/aks-demo-webapp/demo-webapp.yaml
@@ -1,8 +1,15 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: aks-demo-webapp
+  labels:
+    name: aks-demo-webapp
+---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: aks-demo-webapp-source
-  namespace: flux-system
+  namespace: aks-demo-webapp
 spec:
   interval: 1m0s
   ref:
@@ -13,7 +20,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: aks-demo-webapp
-  namespace: flux-system
+  namespace: aks-demo-webapp
 spec:
   interval: 10m0s
   path: ./manifests
