--- a/apps/aks-store-demo/aks-store-demo.yaml
+++ b/apps/aks-store-demo/aks-store-demo.yaml
@@ -1,15 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: aks-store-demo
-  labels:
-    name: aks-store-demo
----
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: aks-store-demo-source
-  namespace: aks-store-demo
+  namespace: flux-system
 spec:
   interval: 1m0s
   ref:
@@ -20,7 +13,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: aks-store-demo
-  namespace: aks-store-demo
+  namespace: flux-system
 spec:
   interval: 10m0s
   path: ./kustomize/base
