Simplified the repo structure

--- a/apps/aks-demo-webapp/aks-demo-webapp.yaml
+++ b/apps/aks-demo-webapp/aks-demo-webapp.yaml
@@ -22,3 +22,4 @@ spec:
     kind: GitRepository
     name: aks-demo-webapp-source
   targetNamespace: aks-demo-webapp
+  serviceAccountName: flux-applier
