--- a/apps/aks-demo-webapp/aks-demo-webapp.yaml
+++ b/apps/aks-demo-webapp/aks-demo-webapp.yaml
@@ -1,10 +1,44 @@
+# Development environment configuration
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: aks-demo-webapp-source
+  name: demo-webapp-dev-source
   namespace: flux-system
 spec:
   interval: 1m0s
+  ref:
+    branch: develop
+  url: https://github.com/fabricekrebs/demo-webapp
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: demo-webapp-dev
+  namespace: flux-system
+spec:
+  interval: 2m0s
+  path: ./manifests/overlays/development
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: demo-webapp-dev-source
+  targetNamespace: demo-webapp-dev
+  serviceAccountName: flux-applier
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: dev-demo-webapp
+      namespace: demo-webapp-dev
+  timeout: 5m
+---
+# Production environment configuration
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: demo-webapp-prod-source
+  namespace: flux-system
+spec:
+  interval: 5m0s
   ref:
     branch: main
   url: https://github.com/fabricekrebs/demo-webapp
@@ -12,14 +46,20 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: aks-demo-webapp
+  name: demo-webapp-prod
   namespace: flux-system
 spec:
-  interval: 1m0s
-  path: ./manifests
+  interval: 10m0s
+  path: ./manifests/overlays/production
   prune: true
   sourceRef:
     kind: GitRepository
-    name: aks-demo-webapp-source
-  targetNamespace: aks-demo-webapp
+    name: demo-webapp-prod-source
+  targetNamespace: demo-webapp
   serviceAccountName: flux-applier
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: demo-webapp
+      namespace: demo-webapp
+  timeout: 15m
